force-app/main/default/objects/blng__Invoice__c/fields/blng__Action__c.field-meta.xml
<CustomField>
    <fullName>blng__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceAction</valueSetName>
    </valueSet>
</CustomField>