force-app/main/default/objects/blng__Invoice__c/fields/blng__Balance__c.field-meta.xml
<CustomField>
    <fullName>blng__Balance__c</fullName>
    <formula>blng__TotalAmount__c - blng__Payments__c - blng__Credits__c + blng__Debits__c + blng__NegativeLineConversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance = Total Amount - Total Net Payments - Credit Notes Applied + Debit Notes Applied + Negative Line Conversions</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>