force-app/main/default/objects/blng__Invoice__c/fields/blng__BaseCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__BaseCurrencyAmount__c</fullName>
    <label>Base Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>