force-app/main/default/objects/blng__Invoice__c/fields/blng__Credits__c.field-meta.xml
<CustomField>
    <fullName>blng__Credits__c</fullName>
    <inlineHelpText>Sum of all credit note amounts applied to this invoice</inlineHelpText>
    <label>Credits</label>
    <summarizedField>blng__InvoiceLine__c.blng__Credits__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>