force-app/main/default/objects/blng__Invoice__c/fields/blng__DaysOutstanding__c.field-meta.xml
<CustomField>
    <fullName>blng__DaysOutstanding__c</fullName>
    <formula>Today() - blng__DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>