force-app/main/default/objects/blng__Invoice__c/fields/blng__DefaultPaymentType__c.field-meta.xml
<CustomField>
    <fullName>blng__DefaultPaymentType__c</fullName>
    <formula>IF( blng__PaymentMethod__c != NULL, TEXT(blng__PaymentMethod__r.blng__PaymentType__c)  , blng__Account__r.blng__DefaultPaymentType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Payment Type</label>
    <type>Text</type>
</CustomField>