force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoiceLocked__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Payment is in progress and the invoice is locked. Before unlocking it, check whether a payment has already been created against this invoice.</inlineHelpText>
    <label>Invoice Locked</label>
    <type>Checkbox</type>
</CustomField>