force-app/main/default/objects/blng__Invoice__c/fields/blng__LastPaymentRunId__c.field-meta.xml
<CustomField>
    <fullName>blng__LastPaymentRunId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Payment Run</label>
    <referenceTo>blng__PaymentRun__c</referenceTo>
    <relationshipName>LastPaymentRun</relationshipName>
    <type>Lookup</type>
</CustomField>