force-app/main/default/objects/blng__Invoice__c/fields/blng__NegativeLineConversion__c.field-meta.xml
<CustomField>
    <fullName>blng__NegativeLineConversion__c</fullName>
    <label>Negative Line Conversion</label>
    <summarizedField>blng__InvoiceLine__c.blng__NegativeLineConversion__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>