force-app/main/default/objects/blng__Invoice__c/fields/blng__NumberOfInvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>blng__NumberOfInvoiceLines__c</fullName>
    <label>Number Of Invoice Lines</label>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>