force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentBatch__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentBatch__c</fullName>
    <label>Payment Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>