force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override Autopay Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__PaymentMethod__c.blng__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.blng__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__PaymentMethod__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>