force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentRunId__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentRunId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Run</label>
    <referenceTo>blng__PaymentRun__c</referenceTo>
    <relationshipName>PaymentRun</relationshipName>
    <type>Lookup</type>
</CustomField>