force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentRunProcessingMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentRunProcessingMessage__c</fullName>
    <label>Payment Run Processing Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>