force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentsAgainstInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentsAgainstInvoice__c</fullName>
    <inlineHelpText>Sum of Payment amounts allocated to the Invoice Header. Should only be used when not using line level allocations.</inlineHelpText>
    <label>Allocations Against Invoice</label>
    <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>