force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentStatus__c</fullName>
    <formula>IF(
        AND(blng__Balance__c &gt; 0, blng__Payments__c &gt; 0),
        IF(blng__Balance__c &lt; 0.0001, &apos;Paid&apos;, &apos;Partially Paid&apos;), IF(blng__Balance__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>