force-app/main/default/objects/blng__Invoice__c/fields/blng__RefundsAgainstInvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundsAgainstInvoiceLines__c</fullName>
    <inlineHelpText>Cancellations of previous allocations to the Invoice Lines</inlineHelpText>
    <label>Unallocations Against Invoice Lines</label>
    <summarizedField>blng__InvoiceLine__c.blng__RefundsAgainstInvoiceLines__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>