force-app/main/default/objects/blng__Invoice__c/fields/blng__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>blng__Subtotal__c</fullName>
    <inlineHelpText>Invoice total (excluding tax)</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>blng__InvoiceLine__c.blng__Subtotal__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>