force-app/main/default/objects/blng__Invoice__c/listViews/blng__All1.listView-meta.xml
<ListView>
    <fullName>blng__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>