force-app/main/default/objects/blng__Invoice__c/listViews/blng__Cancelled_Invoices.listView-meta.xml
<ListView>
    <fullName>blng__Cancelled_Invoices</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__InvoiceStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__InvoiceStatus__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Invoices</label>
    <language>en_US</language>
</ListView>