force-app/main/default/objects/blng__Invoice__c/listViews/blng__Unpaid_Invoice_List.listView-meta.xml
<ListView>
    <fullName>blng__Unpaid_Invoice_List</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__DueDate__c</columns>
    <columns>blng__PaymentStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </filters>
    <label>Unpaid Invoices</label>
    <language>en_US</language>
</ListView>